k8s/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n-eight-n
  labels:
    app: n8n
spec:
  selector:
    matchLabels:
      app: n8n
  replicas: 1
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n-eight-n
          image: n8nio/n8n:1.70.1@sha256:6f9d7b46c1e7299a71aebdc31ae9928395fd2c2d8d9b459b1ae6f75c2b1f0d25
          ports:
            - containerPort: 5678
          volumeMounts:
            - mountPath: /root/.n8n
              name: n8n-data
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
            runAsGroup: 0
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-claim
