k8s/n8n/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n-eight-n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
