k8s/n8n/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.anshulg.com`)
      services:
        - name: n8n
          port: 5678
          kind: Service
  tls:
    secretName: n8n-cert
    domains:
      - main: n8n.anshulg.com
